style.css
.state {
  border: 1px solid black;
  border-radius: 100%;
  width: 50px;
  height: 50px;
  display: flex;
  align-items: center;
  justify-content: center;
  margin: 15px;
}
.finalState {
  border-style: double;
  border-width: 5px;
}

